update bill total

--- a/templates/index.html
+++ b/templates/index.html
@@ -906,12 +906,14 @@
                         </div>
                         <div class="col" style="width: 80%">
                             <select id="single_variable_chart_type" style="width: 50%">
+                                <option value="Bill Distribution Total">Bill distribution (Total)</option>
                                 <option value="Bill Distribution NUOS">Bill distribution (NUOS)</option>
                                 <option value="Bill Distribution DUOS">Bill distribution (DUOS)</option>
                                 <option value="Bill Distribution TUOS">Bill distribution (TUOS)</option>
                                 <option value="Bill Distribution Retailer">Bill distribution (Retailer)</option>
                                 <option value="Bill Distribution Wholesale">Bill distribution (Wholesale)</option>
 
+                                <option value="Bill Box Plot Total">Bill box plot (Total)</option>
                                 <option value="Bill Box Plot NUOS">Bill box plot (NUOS)</option>
                                 <option value="Bill Box Plot DUOS">Bill box plot (DUOS)</option>
                                 <option value="Bill Box Plot TUOS">Bill box plot (TUOS)</option>
@@ -964,6 +966,7 @@
                                 <option value="Bill TUOS">Bill TUOS ($/year)</option>
                                 <option value="Bill Retailer">Bill Retailer ($/year)</option>
                                 <option value="Bill Wholesale">Bill Wholesale ($/year)</option>
+                                <option value="Bill Total">Bill Total ($/year)</option>
                             </select>
                             <script src="static/plot_results.js"></script>
                             <br/>
@@ -980,6 +983,7 @@
                                 <option value="Bill TUOS">Bill TUOS ($/year)</option>
                                 <option value="Bill Retailer">Bill Retailer ($/year)</option>
                                 <option value="Bill Wholesale">Bill Wholesale ($/year)</option>
+                                <option value="Bill Total">Bill Total ($/year)</option>
                             </select>
                             <script src="static/plot_results.js"></script>
                         </div>
