Add new energy flow graph to end_user_tech charts.

--- a/templates/index.html
+++ b/templates/index.html
@@ -872,6 +872,7 @@
                     <div style="height: 10%; overflow: hidden;">
                         <select  id="select_net_graph" style="float: right; width: 30%;">
                             <option value="Annual Average Profile"> Annual Average Profile</option>
+                            <option value="Annual Average Energy Flow Profile">Annual Average Energy Flow Profile</option>
                             <option value="Daily Profiles">Daily Profiles</option>
                             <option value="Daily Profile Interquartile Range">Daily Profile Interquartile Range</option>
                             <option value="Daily kWh Histogram">Daily kWh Histogram</option>
