--- a/templates/index.html
+++ b/templates/index.html
@@ -685,9 +685,13 @@
             <font id="tariff_status_set" color="green" style="display: none;">&#9679;</font> Tariffs
         </button>
         <button id="results_panel_button" class="main_tab_links"
-                onclick="displayPanels(event, 'results_panel')" style="width: 100%; height: 50px">
+                onclick="displayPanels(event, 'results_panel')" style="width: 100%; height: 50px; margin-bottom: .75vh;">
             <font id="results_status_not_set" color="black" style="display: inline;">&#9675;</font>
             <font id="results_status_set" color="green" style="display: none;">&#9679;</font> Results
+        </button>
+        <hr style="padding-bottom: .75vh;">
+        <button style="width: 100%; height: 50px" onclick="check_that_a_case_can_be_added()">
+            Calculate results
         </button>
     </div>
     <div id="right_column" class="main_tab" style="height: 100%; width: 83%; float: left; overflow: hidden; position: relative;">
@@ -1280,14 +1284,6 @@
                                     <option selected="selected">None</option>
                                 </select>
                             </div>
-                        </div>
-                        <div class="row">
-                            <h4 style="margin: 0;">Actions</h4>
-                            <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
-                        </div>
-                        <div class="row" style="overflow: hidden;">
-                            <button style="width: 80%; text-align: left; height: 3.25vh;"
-                                    onclick="check_that_a_case_can_be_added()">Create case</button>
                         </div>
                     </div>
                 </div>
