hide file dialog form

--- a/templates/index.html
+++ b/templates/index.html
@@ -502,8 +502,8 @@
         <thead class="tariff_table_header"></thead>
         <tbody class="tariff_table_body"></tbody>
     </table>
-    <form id="file_form" method = "POST" enctype = "multipart/form-data">
-        <input type="file" id="file1" name="file" style="display:none">
+    <form id="file_form" method = "POST" enctype = "multipart/form-data" style="display:none">>
+        <input type="file" id="file1" name="file">
         <input type = "submit"/>
     </form>
 
