draft saving dialog

--- a/templates/index.html
+++ b/templates/index.html
@@ -518,6 +518,7 @@
               <ul>
                   <li><div onclick="load_project()">Load Project</div></li>
                   <li><div onclick="save_project()">Save Project</div></li>
+                  <li><a href="/save_project_as/new_project.pkl" download>Save Project As</a></li>
                   <li><div onclick="save_project_as()">Save Project As</div></li>
                   <hr>
                   <li><div id="restart_button" onclick="restart_tool()">Restart Tool</div></li>
