added FileSaver package

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
     <script src="static/export.js"></script>
     <script src="static/errors.js"></script>
     <script src="static/tou_analysis.js"></script>
+    <script src="static/FileSaver.js-master/FileSaver.js-master/dist/FileSaver.js"></script>
 
 
   <style>
