file save in js working

--- a/templates/index.html
+++ b/templates/index.html
@@ -519,6 +519,7 @@
               <ul>
                   <li><div onclick="load_project()">Load Project</div></li>
                   <li><div onclick="save_project()">Save Project</div></li>
+                  <li><div onclick="saveAs('/save_project_as/new_project.tda_results', 'new_project.tda_results');">Save Project As</div></li>
                   <li><a href="/save_project_as/new_project.pkl" download>Save Project As</a></li>
                   <li><div onclick="save_project_as()">Save Project As</div></li>
                   <hr>
