Allow importing of load and network load data.

--- a/templates/index.html
+++ b/templates/index.html
@@ -530,7 +530,7 @@
           </li>
           <li><div>Load</div>
               <ul class="sub_menu">
-                  <li><div onclick="import_data('/import_load', add_load_names)">Import Load Data</div></li>
+                  <li><div onclick="import_data('/import_load_data', add_load_names)">Import Load Data</div></li>
                   <li><div onclick="choose_data_to_delete()">Delete Load Data</div></li>
                   <li><div onclick="restore_original_data_set()">Restore Original Load Data</div></li>
                   <hr>
@@ -633,7 +633,7 @@
                         </li>
                         <hr>
                         <li>
-                            <div onclick="import_data('/import_network', add_option_to_ui)">Create New Synthetic Network Load</div>
+                            <div onclick="import_data('/import_network_data', build_network_load_options)">Create New Synthetic Network Load</div>
                         </li>
                     </ul>
                   </li>
