tech details in results working

--- a/templates/index.html
+++ b/templates/index.html
@@ -1196,6 +1196,7 @@
                     </div>
                     <div class="case_info_tab_content" id="demog_info"></div>
                     <div class="case_info_tab_content" id="tech_info">
+                        <div class="case_name label_stacked">Case:</div>
                         <div class="row" style="overflow: hidden;">
                             <h4 style="margin-bottom: 0;">Solar</h4>
                             <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
@@ -1251,7 +1252,7 @@
                                 <div class="label_stacked">Network Peak Limit for Event (kW):</div>
                                 <div class="label_stacked">Energy conservation:</div>
                             </div>
-                            <div class="col demand_response_details" style="width: 20%;"></div>
+                            <div class="col demand_response_details" style="width: 20%;">
                                 <div class="label_stacked" name="penetration"></div>
                                 <div class="label_stacked" name="mean_load_reduction"></div>
                                 <div class="label_stacked" name="standard_dev"></div>
