--- a/templates/index.html
+++ b/templates/index.html
@@ -1109,97 +1109,111 @@
                                 onclick="displayCaseInfoType(event, 'tech_info')">End user tech info</button>
                     </div>
                     <div class="case_info_tab_content" id="load_info">
-                        <div id="info_load_summary_labels" class="col" style="width: 100%; display: none;">
-                            <div class="row" style="height: 2.5vh;">
-                                <div class="label_line">Case:&nbsp</div>
-                                <div id="load_info_case" class="label_line"></div>
+                        <div class="case_name label_stacked case_detail">Case:&nbsp</div>
+                        <div class="row" style="overflow: hidden;">
+                            <h4 style="margin-bottom: 0;">Summary</h4>
+                            <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
+                        </div>
+                        <div class="row" style="overflow: hidden;">
+                            <div class="col" style="width: 30%">
+                                <div class="label_stacked">No. of users:&nbsp</div>
+                                <div class="label_stacked">Database:&nbsp</div>
                             </div>
-                            <div class="row" style="height: 2.5vh;">
-                                <div class="label_line">No. of users:&nbsp</div>
-                                <div id="load_info_n_users" class="label_line"></div>
-                            </div>
-                            <div class="row" style="height: 2.5vh;">
-                                <div class="label_line">Database:&nbsp</div>
-                                <div id="load_info_database" class="label_line"></div>
+                            <div class="col" style="width: 70%">
+                                <div id="load_info_n_users" class="label_stacked"></div>
+                                <div id="load_info_database" class="label_stacked"></div>
                             </div>
                         </div>
                     </div>
                     <div class="case_info_tab_content" id="wholesale_price_info">
-                        <div id="info_wholesale_price_summary_labels" class="col" style="width: 100%; display: none;">
-                            <div class="row" style="height: 2.5vh;">
-                                <div class="label_line">Case:&nbsp</div>
-                                <div id="wholesale_price_case" class="label_line"></div>
+                        <div class="case_name label_stacked case_detail">Case:&nbsp</div>
+                        <div class="row" style="overflow: hidden;">
+                            <h4 style="margin-bottom: 0;">Summary</h4>
+                            <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
+                        </div>
+                        <div class="row" style="overflow: hidden;">
+                            <div class="col" style="width: 30%">
+                                <div class="label_stacked">Year:&nbsp</div>
+                                <div class="label_stacked">State:&nbsp</div>
                             </div>
-                            <div class="row" style="height: 2.5vh;">
-                                <div class="label_line">Year:&nbsp</div>
-                                <div id="wholesale_price_state" class="label_line"></div>
-                            </div>
-                            <div class="row" style="height: 2.5vh;">
-                                <div class="label_line">State:&nbsp</div>
-                                <div id="wholesale_price_year" class="label_line"></div>
+                            <div class="col" style="width: 70%">
+                                <div id="wholesale_price_state" class="label_stacked"></div>
+                                <div id="wholesale_price_year" class="label_stacked"></div>
                             </div>
                         </div>
                     </div>
                     <div class="case_info_tab_content" id="network_tariff_info">
                         <div class="info_tariff_summary row">
-                            <div class="info_tariff_summary_labels col" style="width: 100%; display: none;">
-                                <div class="row" style="height: 2.5vh;">
-                                    <div class="label_line">Case:&nbsp</div>
-                                    <div class="tariff_info_case label_line"></div>
+                            <div class="case_name label_stacked case_detail">Case:&nbsp</div>
+                            <div class="row" style="overflow: hidden;">
+                                <h4 style="margin-bottom: 0;">Summary</h4>
+                                <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
+                            </div>
+                            <div class="row" style="overflow: hidden;">
+                                <div class="col" style="width: 30%">
+                                    <div class="label_stacked">Name:&nbsp</div>
+                                    <div class="label_stacked">Type:&nbsp</div>
+                                    <div class="label_stacked">State:&nbsp</div>
+                                    <div class="label_stacked">Tariff Component:&nbsp</div>
                                 </div>
-                                <div class="row" style="height: 2.5vh;">
-                                    <div class="label_line">Name:&nbsp</div>
-                                    <div class="tariff_info_name label_line"></div>
-                                </div>
-                                <div class="row" style="height: 2.5vh;">
-                                    <div class="label_line">Type:&nbsp</div>
-                                    <div class="tariff_info_type label_line"></div>
-                                </div>
-                                <div class="row" style="height: 2.5vh;">
-                                    <div class="label_line">State:&nbsp</div>
-                                    <div class="tariff_info_state label_line"></div>
-                                </div>
-                                <div class="row" style="height: 2.5vh;">
-                                    <div class="label_line">Tariff Component:&nbsp</div>
-                                    <div class="tariff_info_component label_line"></div>
+                                <div class="col" style="width: 70%">
+                                    <div class="tariff_info_name label_stacked case_detail"></div>
+                                    <div class="tariff_info_type label_stacked case_detail"></div>
+                                    <div class="tariff_info_state label_stacked case_detail"></div>
+                                    <div class="tariff_info_component label_stacked case_detail"></div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="row" style="overflow: hidden;">
+                            <h4 style="margin-bottom: 0;">Components</h4>
+                            <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
                         </div>
                         <div id="network_info" style="width:100%;"></div>
                     </div>
                     <div class="case_info_tab_content" id="retail_tariff_info">
                         <div class="info_tariff_summary row">
-                            <div class="info_tariff_summary_labels col" style="width: 100%; display: none;">
-                                <div class="row" style="height: 2.5vh;">
-                                    <div class="label_line">Case:&nbsp</div>
-                                    <div class="tariff_info_case label_line"></div>
+                            <div class="case_name label_stacked case_detail">Case:&nbsp</div>
+                            <div class="row" style="overflow: hidden;">
+                                <h4 style="margin-bottom: 0;">Summary</h4>
+                                <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
+                            </div>
+                            <div class="row" style="overflow: hidden;">
+                                <div class="col" style="width: 30%">
+                                    <div class="label_stacked">Name:&nbsp</div>
+                                    <div class="label_stacked">Type:&nbsp</div>
+                                    <div class="label_stacked">State:&nbsp</div>
+                                    <div class="label_stacked">Tariff Component:&nbsp</div>
                                 </div>
-                                <div class="row" style="height: 2.5vh;">
-                                    <div class="label_line">Name:&nbsp</div>
-                                    <div class="tariff_info_name label_line"></div>
-                                </div>
-                                <div class="row" style="height: 2.5vh;">
-                                    <div class="label_line">Type:&nbsp</div>
-                                    <div class="tariff_info_type label_line"></div>
-                                </div>
-                                <div class="row" style="height: 2.5vh;">
-                                    <div class="label_line">State:&nbsp</div>
-                                    <div class="tariff_info_state label_line"></div>
-                                </div>
-                                <div class="row" style="height: 2.5vh;">
-                                    <div class="label_line">Tariff Component:&nbsp</div>
-                                    <div class="tariff_info_component label_line"></div>
+                                <div class="col" style="width: 70%">
+                                    <div class="tariff_info_name label_stacked case_detail"></div>
+                                    <div class="tariff_info_type label_stacked case_detail"></div>
+                                    <div class="tariff_info_state label_stacked case_detail"></div>
+                                    <div class="tariff_info_component label_stacked case_detail"></div>
                                 </div>
                             </div>
                         </div>
+                        <div class="row" style="overflow: hidden;">
+                            <h4 style="margin-bottom: 0;">Components</h4>
+                            <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
+                        </div>
                         <div id="retail_info" style="width:100%;"></div>
                     </div>
-                    <div class="case_info_tab_content" id="demog_info"></div>
+                    <div class="case_info_tab_content" id="demog_info">
+                        <div class="case_name label_stacked case_detail">Case:&nbsp</div>
+                        <div class="row" style="overflow: hidden;">
+                            <h4 style="margin-bottom: 0;">Summary</h4>
+                            <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
+                        </div>
+                        <div class="row" style="overflow: hidden;">
+                            <div class="col case_detail demo_labels" style="width: 70%"></div>
+                            <div class="col case_detail demo_values" style="width: 30%"></div>
+                        </div>
+                    </div>
                     <div class="case_info_tab_content" id="tech_info">
-                        <div class="case_name label_stacked">Case:</div>
+                        <div class="case_name label_stacked case_detail">Case:</div>
                         <div class="row" style="overflow: hidden;">
                             <h4 style="margin-bottom: 0;">Solar</h4>
-                            <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
+                            <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
                         </div>
                         <div class="row" style="overflow: hidden;">
                             <div class="col" style="width: 60%">
@@ -1209,15 +1223,15 @@
                                 <div class="label_stacked">Solar profiles :</div>
                             </div>
                             <div class="col solar_details" style="width: 20%">
-                                <div class="label_stacked" name="penetration"></div>
-                                <div class="label_stacked" name="mean_size"></div>
-                                <div class="label_stacked" name="standard_dev"></div>
-                                <div class="label_stacked" name="solar_data"></div>
+                                <div class="label_stacked case_detail" name="penetration"></div>
+                                <div class="label_stacked case_detail" name="mean_size"></div>
+                                <div class="label_stacked case_detail" name="standard_dev"></div>
+                                <div class="label_stacked case_detail" name="solar_data"></div>
                             </div>
                         </div>
                         <div class="row" style="overflow: hidden;">
                             <h4 style="margin-bottom: 0;">Batteries</h4>
-                            <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
+                            <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
                         </div>
                         <div class="row" style="overflow: hidden;">
                             <div class="col" style="width: 60%">
@@ -1230,18 +1244,18 @@
                                 <div class="label_stacked">Operational strategy:</div>
                             </div>
                             <div class="col battery_details" style="width: 20%">
-                                <div class="label_stacked" name="penetration"></div>
-                                <div class="label_stacked" name="mean_size"></div>
-                                <div class="label_stacked" name="standard_dev"></div>
-                                <div class="label_stacked" name="mean_power_to_energy"></div>
-                                <div class="label_stacked" name="power_to_energy_standard_dev"></div>
-                                <div class="label_stacked" name="restriction"></div>
-                                <div class="label_stacked" name="strategy"></div>
+                                <div class="label_stacked case_detail" name="penetration"></div>
+                                <div class="label_stacked case_detail" name="mean_size"></div>
+                                <div class="label_stacked case_detail" name="standard_dev"></div>
+                                <div class="label_stacked case_detail" name="mean_power_to_energy"></div>
+                                <div class="label_stacked case_detail" name="power_to_energy_standard_dev"></div>
+                                <div class="label_stacked case_detail" name="restriction"></div>
+                                <div class="label_stacked case_detail" name="strategy"></div>
                             </div>
                         </div>
                         <div class="row" style="overflow: hidden">
                             <h4 style="margin: 0;">Demand response</h4>
-                            <hr style="width: 80%; float: left; margin-bottom: 1.5vh;">
+                            <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
                         </div>
                         <div class="row" style="overflow: hidden;">
                             <div class="col" style="width: 60%;">
@@ -1253,12 +1267,12 @@
                                 <div class="label_stacked">Energy conservation:</div>
                             </div>
                             <div class="col demand_response_details" style="width: 20%;">
-                                <div class="label_stacked" name="penetration"></div>
-                                <div class="label_stacked" name="mean_load_reduction"></div>
-                                <div class="label_stacked" name="standard_dev"></div>
-                                <div class="label_stacked" name="mean_response_time"></div>
-                                <div class="label_stacked" name="network_kw_events_limit"></div>
-                                <div class="label_stacked" name="energy_conservation"></div>
+                                <div class="label_stacked case_detail" name="penetration"></div>
+                                <div class="label_stacked case_detail" name="mean_load_reduction"></div>
+                                <div class="label_stacked case_detail" name="standard_dev"></div>
+                                <div class="label_stacked case_detail" name="mean_response_time"></div>
+                                <div class="label_stacked case_detail" name="network_kw_events_limit"></div>
+                                <div class="label_stacked case_detail" name="energy_conservation"></div>
                             </div>
                         </div>
                     </div>
