Add merging of solar and load from different years
Also fixed tariff editor reszing

--- a/templates/index.html
+++ b/templates/index.html
@@ -1415,6 +1415,7 @@
     <script>document.getElementById("default_tariff_type_tab").click();</script>
     <script>document.getElementById("default_panel").click();</script>
     <script src="static/resize_plots.js"></script>
+    <script>$(function(){add_resize()})</script>
     <script src="static/export_chart_data.js"></script>
     <script src="static/end_user_tech.js"></script>
     <script src="static/network_load_options.js"></script>
