changed menubar colour

--- a/templates/index.html
+++ b/templates/index.html
@@ -526,7 +526,7 @@
 
 <body>
 <div id="container">
-  <div id="menu_bar" style="height: 20px;">
+  <div id="menu_bar" style="height: 20px; background-color: #E7EAED;">
       <ul id="tariff_menu" class="dropdown">
           <li><div>Project</div>
               <ul>
