--- a/static/css_trick_dropdown_example/dropdown_menu.css
+++ b/static/css_trick_dropdown_example/dropdown_menu.css
@@ -1,7 +1,7 @@
 *									{ margin: 0; padding: 0; }
 body								{ font: 14px Helvetica, Sans-Serif; }
 #page-wrap							{ width: 800px; margin: 25px auto; }
-a									{ text-decoration: none; }
+ul a								{ text-decoration: none; }
 ul									{ list-style: none; }
 p                                   { margin: 15px 0; }
 	LEVEL ONE
